using System.Collections;
using UnityEngine;

public class PlayerAnimatorController : MonoBehaviour
{
    private Animator animator;
  
    private void Awake()
    {
        // "Player" 오브젝트 기준으로 자식 오브젝트인 
        // "arms_SniperRifle" 오브젝트에 Animator 컴포넌트가 존재.
        animator = GetComponentInChildren<Animator>();
    }

    public float MoveSpeed
    {
        set => animator.SetFloat("MovementSpeed", value);
        get => animator.GetFloat("MovementSpeed");
    }

    public void ToggleSniperMode()
    {
        if (!animator.GetCurrentAnimatorStateInfo(0).IsName("scoped@sniper_02"))
        {
            animator.SetTrigger("ZoomIn");
        }
        else if (animator.GetCurrentAnimatorStateInfo(0).IsName("scoped@sniper_02"))
        {
            animator.SetTrigger("ZoomOut");
        }
    }

    public void Fire()
    {
        animator.SetTrigger("Fire");
    }
}
